# xercesc-parsing-example

./: .gitignore  CMakeLists.txt  README.md
data/: five.worker.xml  four.worker.xml  people-with-errors.xml  people.xml
lib/: CMakeLists.txt
lib/include/: mainlib.h
lib/source/: mainlib.cpp
test/: CMakeLists.txt
test/source/: main.cpp
